# nutrition-experiment-lab

./: .gitignore  PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: make_demo_gif.py
src/nutrition_lab/: __init__.py  account.py  analysis.py  api.py  auth.py  config.py  db.py  demo.py  experiments.py  logging.py  models.py  report.py  safety.py  serve.py  users.py
src/nutrition_lab/routes/: __init__.py  account.py  analysis.py  auth.py  demo.py  deps.py  experiments.py  interventions.py  logging.py
tests/: conftest.py  test_analysis.py  test_api.py  test_auth.py  test_demo_route.py  test_experiments.py  test_logging.py  test_phase5.py  test_report.py  test_safety.py
web/: next.config.ts  package-lock.json  package.json  playwright.capture.config.ts  playwright.config.ts  tsconfig.tsbuildinfo
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/account/: page.tsx
web/app/log/: page.tsx
web/app/login/: page.tsx
web/app/privacy/: page.tsx
web/components/: auth-guard.tsx  confounder-list.tsx  experiment-card.tsx  nav-bar.tsx  onboarding.tsx  outcome-chart.tsx  safety-notice.tsx  shell.tsx  states.tsx  ui.tsx
web/components/brand/: lab-mark.tsx  wordmark.tsx
web/components/nav/: nav-rail.tsx  top-bar.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx  field.tsx  input.tsx  kv.tsx  rating-group.tsx  segmented.tsx  select.tsx  tabs.tsx  textarea.tsx  toggle.tsx
web/components/viz/: adherence-meter.tsx  (+6 more)
web/e2e/: core-loop.spec.ts
web/lib/: api.ts  cn.ts
web/screenshots/: capture.spec.ts
(+3 files in other folders)
