[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nutrition-experiment-lab"
version = "0.1.0"
description = "A private lab notebook for running structured n-of-1 nutrition experiments."
readme = "PLAN.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Conal" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.5.0",
    "psycopg[binary]>=3.1.0",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "itsdangerous>=2.1.0",
    "pandas>=2.2.0",
    "python-dateutil>=2.8.2",
    "reportlab>=4.0.0",
]

[project.scripts]
nutrition-lab-serve = "nutrition_lab.serve:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nutrition_lab*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/nutrition_lab"]
branch = true
omit = ["*/__init__.py", "*/serve.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 1
show_missing = true

[tool.mypy]
python_version = "3.11"
files = ["src/nutrition_lab"]
check_untyped_defs = true
ignore_missing_imports = true
